--- a/style.css
+++ b/style.css
@@ -44,10 +44,14 @@ header {
     font-size: 24px;
 }
 
+.section {
+    height: auto;
+    padding: 4em 0;
+    width: auto;
+}
+
 .firstSection {
     background-color: var(--main-dark-color);
-    height: 400px;
-    width: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -94,3 +98,116 @@ header {
     width: 100%;
     height: 100%;
 }
+
+.secondSectionContainer {
+    width: 75%;
+    height: 80%;
+    margin: 0 auto;
+}
+
+.secondSectionTitle {
+    margin: 1em auto;
+    text-align: center;
+}
+
+.itemsContainer {
+    margin-top: 3em;
+    gap: 5em;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.item {
+    width: 15%;
+    height: auto;
+}
+
+.itemIllustration {
+    height: 150px;
+    width: 150px;
+    border: 3px solid var(--button-color);
+    border-radius: 10px;
+}
+
+.itemSubtext {
+    margin-top: 0.5em;
+    text-align: center;
+}
+
+.thirdSection {
+    background-color: var(--main-grey-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.quoteContainer {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.quoteText {
+    color: var(--main-dark-color);
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.quoteAuthor {
+    text-align: right;
+    margin: 1em 0;
+}
+
+.sectionFour {
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.callToActionContainer {
+    box-sizing: border-box;
+    width: 75%;
+    border-radius: 5px;
+    background-color: var(--button-color);
+    padding: 2em 6em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.callToActionTitle {
+    color: white;
+    font-weight: 500;
+}
+
+.callToActionSubtext {
+    color: white;
+    font-weight: 100;
+}
+
+.callToActionButton {
+    background-color: var(--button-color);
+    color: white;
+    padding: 0.5em 2em;
+    border: 1px solid white;
+    border-radius: 5px;
+    margin: 0.5em 0;
+}
+
+footer {
+    background-color: var(--main-dark-color);
+    width: 100%;
+    height: 5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footerText {
+    color: var(--main-grey-color)
+}
+
+
