--- a/style.css
+++ b/style.css
@@ -95,8 +95,10 @@ header {
 }
 
 .firstSectionImage {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
 }
 
 .secondSectionContainer {
@@ -118,16 +120,18 @@ header {
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    background-color: gray;
 }
 
 .item {
-    width: 15%;
+    width: 150px;
     height: auto;
+    background-color: red;
 }
 
 .itemIllustration {
     height: 150px;
-    width: 150px;
+    width: 100%;
     border: 3px solid var(--button-color);
     border-radius: 10px;
 }
